force-app/main/default/objects/Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of Event</description>
    <inlineHelpText>Description of Event</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>