force-app/main/default/objects/Event__c/fields/Event_Image__c.field-meta.xml
<CustomField>
    <fullName>Event_Image__c</fullName>
    <description>Banner Image or Logo for Event</description>
    <inlineHelpText>Banner Image or Logo for Event</inlineHelpText>
    <formula>IMAGE( Event_Image_URL__c ,  Name , 50, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Image</label>
    <type>Text</type>
</CustomField>