force-app/main/default/objects/Event__c/fields/Event_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Image_URL__c</fullName>
    <label>Event Image URL</label>
    <type>Url</type>
</CustomField>