force-app/main/default/objects/Event__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Event Start Date</description>
    <inlineHelpText>Event Start Date</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>