force-app/main/default/objects/Event__c/fields/Total_Games__c.field-meta.xml
<CustomField>
    <fullName>Total_Games__c</fullName>
    <description>Rollup Summary for the Total Number of Games in Library</description>
    <inlineHelpText>Total Number of Games in Library</inlineHelpText>
    <label>Total Games</label>
    <summaryForeignKey>BG_Library_Entry__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>