force-app/main/default/objects/Event__c/listViews/All_Events.listView-meta.xml
<ListView>
    <fullName>All_Events</fullName>
    <columns>Event_Image__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Events</label>
</ListView>